[gd_scene load_steps=2 format=3 uid="uid://b8k5cfauxt3f6"]

[ext_resource type="Script" path="res://scripts/TalentAllocation.gd" id="1_oodo1"]

[node name="TalentAllocation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oodo1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeroSelectContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HeroInfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PointsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="TreesContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "BACK"
